# mimic-reader

./: .gitignore  ARCHITECTURE.md  LIBRARY_IMPLEMENTATION.md  MIGRATION_TO_TAURI_V2.md  README.md  TAURI_V2_MIGRATION_COMPLETE.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: library.rs  main.rs  pdf_handler.rs
src/components/: BookCard.vue  BookReader.vue  FloatingStrips.vue  MiniReader.vue  PageFlip.vue  RapidScanBar.vue  ReaderControls.vue  TitleBar.vue
src/composables/: usePlatform.ts  useVelocity.ts  useWorkspacePersistence.ts
src/stores/: bookStore.ts  useReaderStore.ts
src/styles/: main.css
src/types/: index.ts
src/utils/: pdf.ts
src/views/: LibraryView.vue  ReaderView.vue
src/workers/: thumbnailWorker.ts
